crates/analyzer/tests/snapshots/errors__duplicate_struct_in_module.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: a struct named "MyStruct" has already been defined
  ┌─ compile_errors/duplicate_struct_in_module.fe:1:8
  │
1 │ struct MyStruct {
  │        ^^^^^^^^ `MyStruct` first defined here
  ·
5 │ struct MyStruct {
  │        -------- `MyStruct` redefined here


